# rcell2

./: .gitignore  NAMESPACE  README.md
R/: cellid_wrapper.R  cplot2.R
data/: dark.TIFF  datos.con.todo.RDS  test.TIFF
data/image_samples/: BF_Position003.tif  YFP_Position003.tif
data/image_samples_x/: TFP_Position002.tif  TFP_Position003.tif
data/time_series_image_samples/: BF_Position001_time02.tif  BF_Position002_time02.tif  TFP_Position001_time01.tif  YFP_Position001_time02.tif  YFP_Position002_time02.tif
inst/: cell
man/: cell2.Rd  cellArgs.Rd  hues_from_xy.Rd  magickCell.Rd  pipe.Rd
src/: Makevars  align_image.c  cell.c  segment.c
src/cellIDnoglib/: .gitignore  Makefile  Makefile.am  README.md  README.txt  cell.c  configure.ac  output_descriptions.csv  output_descriptions2.txt  parameters_description.txt  parameters_example.txt  segment.c  segment.h  tif.c
src/tiff410/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  libtiff-4.pc
src/tiff410/contrib/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/tiff410/contrib/addtiffo/: CTestTestfile.cmake  Makefile  addtiffo  cmake_install.cmake
src/tiff410/contrib/dbs/: CTestTestfile.cmake  Makefile  cmake_install.cmake  tiff-bi  tiff-grayscale  tiff-palette  tiff-rgb
src/tiff410/contrib/dbs/xtiff/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/tiff410/contrib/iptcutil/: CTestTestfile.cmake  Makefile  cmake_install.cmake  iptcutil
src/tiff410/contrib/mfs/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/tiff410/contrib/pds/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/tiff410/contrib/ras/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/tiff410/contrib/stream/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/tiff410/contrib/tags/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/tiff410/contrib/win_dib/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/tiff410/html/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/tiff410/html/images/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/tiff410/html/man/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/tiff410/libtiff/: CTestTestfile.cmake  Makefile  cmake_install.cmake  libtiff.5.5.0.dylib  libtiff.5.dylib  libtiffxx.5.5.0.dylib  libtiffxx.5.dylib  tif_config.h  tif_unix.c
src/tiff410/man/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/tiff410/port/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/tiff410/test/: CTestTestfile.cmake  Makefile  ascii_tag  cmake_install.cmake  custom_dir  defer_strile_loading  defer_strile_writing  long_tag  raw_decode  rewrite  short_tag  strip_rw  testtypes
src/tiff410/tools/: CTestTestfile.cmake  Makefile  cmake_install.cmake  fax2ps  fax2tiff  pal2rgb  ppm2tiff  raw2tiff  rgb2ycbcr  thumbnail  tiff2bw  tiff2pdf  tiff2ps  tiff2rgba  tiffcmp  tiffcp  tiffcrop  tiffdither  tiffdump  tiffgt  tiffinfo  tiffmedian  tiffset  tiffsplit
testings/: test_cell.Rmd
testings/src_cellid/: cell.c  segment.c
testings/src_rcell2/: segment.c
